--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
-      <h1><u>First Black Chicken Site</u></h1>
-      <h2>Here's a Black Chicken!</h2>
+      <h1><u>My First Black Chicken Site</u></h1>
+      <h2>Here's a Black Chicken:</h2>
     <img src="images/black-chicken.jpg" alt="My black-chicken image.">
     <p>This chicken is very wild looking! It has a rare condition that is not only expressed in chickens.</p>
     <a href="https://www.google.com/search?q=Melanistic+Animals&safe=off&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjdl4GZiJrjAhVOZN8KHTNDDMkQ_AUIECgB&biw=1088&bih=1092">Here are some other Melanistic Animals.</a>
-    <h4>Click the link, I said DO IT!</h4>
+    <p>Click the link, I said DO IT!</p>
+    <button>Change user</button>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
